- files list is now scrollable when too long - bug fixing in Search (now tags are no more found in search results, "next" function do not break anymore)

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -311,10 +311,14 @@ box-shadow: 0px 0px 10px #888888;
 
 .topMenu ul 
     {
-
-margin:0px 0 0 0;padding:0;float:left;width:100%;
-background:#efefef;
-box-shadow: inset 0 2px 3px 1px #c3c2c1;
+    margin: 0;
+    padding: 0;
+    float: left;
+    width: 101%;
+    max-height: 500px;
+    overflow: auto;
+    background: #efefef;
+    box-shadow: inset 0 2px 3px 1px #c3c2c1;
     }
 
 
